tests/sumo/spec/distribution/errors/route_nested_invalid_ref/errors.sumo
Error: Invalid reference to route 'x' in route for vehicle '1'.
